# dict-lexitron

./: AUTHORS  ChangeLog  Makefile  Makefile.am  README  TODO  configure.in  lexitron.info  parse_etlex.pl  parse_telex.pl
debian/: changelog  control  copyright  install  postinst  postrm  rules
