dnl Process this file with autoconf to produce a configure script.
AC_INIT(parse_telex.pl)
AM_INIT_AUTOMAKE(dictd-lexitron, `date +%Y%m%d`)
AC_SUBST(VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_ARG_WITH(dictdatadir,
    [  --with-dictdatadir=DIR       dictionary data directory in DIR [PREFIX/lib/dict]],
    [dictdatadir="$withval"], [dictdatadir=\$\{prefix\}/lib/dict])

AC_SUBST(dictdatadir)

AC_PATH_PROG(PERL, perl, no)
if test "x$PERL" = "xno"; then
   AC_MSG_ERROR([perl is needed])
fi
AC_SUBST(PERL)

AC_PATH_PROG(DICTZIP, dictzip, no)
if test "x$DICTZIP" = "xno"; then
   AC_MSG_ERROR([dictzip is needed])
fi
AC_SUBST(DICTZIP)

AC_PATH_PROG(DICTFMT, dictfmt, no)
if test "x$DICTFMT" = "xno"; then
   AC_MSG_ERROR([dictfmt is needed])
fi
AC_SUBST(DICTFMT)

AC_OUTPUT(	
	Makefile  \
)
